添加字符串上传及获取接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,16 @@
 server:
   port: 1234
 
-springdoc:
-  api-docs:
-    path: /api-docs
-    enabled: true
-  swagger-ui:
-    enabled: true
-    path: /swagger-ui.html
+spring:
+  data:
+    redis:
+      host: 8.138.84.94
+      port: 6400
+      password: IB68aIJwf
+      jedis:
+        pool:
+          max-idle: 8
+          min-idle: 0
+          max-active: 8
+          min-evictable-idle-time: 60000
+          time-between-eviction-runs: 30000
