--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
             <artifactId>tika-core</artifactId>
             <version>2.9.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
     </dependencies>
 
     <build>
