--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,15 @@
         <jedis.version>5.2.0</jedis.version>
         <jackson.version>2.18.1</jackson.version>
         <guava.version>33.3.1-jre</guava.version>
+        <okhttp.version>4.12.0</okhttp.version>
+        <thumbnailator.version>0.4.20</thumbnailator.version>
+        <tika.version>2.9.1</tika.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.0</version>
+        <version>3.4.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -52,6 +55,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
 <!--        <dependency>-->
@@ -83,6 +87,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <version>${okhttp.version}</version>
         </dependency>
 
         <dependency>
@@ -147,13 +152,13 @@
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
-            <version>0.4.20</version>
+            <version>${thumbnailator.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>2.9.1</version>
+            <version>${tika.version}</version>
         </dependency>
 
         <dependency>
