--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
             <artifactId>jasypt</artifactId>
             <version>1.9.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
